dfir_datalog_core/src/snapshots/dfir_datalog_core__tests__anti_join@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
8v1 = unique :: < 'tick > ();
11v1 = unique :: < 'tick > ();
13v1 = source_stream (ints_1);
14v1 = source_stream (ints_2);
15v1 = source_stream (ints_3);
16v1 = for_each (| v | result . send (v) . unwrap ());
17v1 = join :: < 'tick , 'tick , hydroflow :: compiled :: pull :: HalfMultisetJoinState > ();
18v1 = map (| kv : ((_ ,) , ((_ ,) , (_ ,))) | (kv . 0 . 0 , kv . 1 . 0 . 0 , kv . 1 . 1 . 0 ,));
19v1 = map (| _v : (_ , _ ,) | ((_v . 1 ,) , (_v . 0 ,)));
20v1 = map (| _v : (_ , _ ,) | ((_v . 0 ,) , (_v . 1 ,)));
21v1 = anti_join ();
22v1 = map (| kv : ((_ ,) , (_ , _ ,)) | (kv . 0 . 0 , kv . 1 . 0 , kv . 1 . 1 ,));
23v1 = map (| _v : (_ , _ , _ ,) | ((_v . 0 ,) , (_v . 1 , _v . 2 ,)));
24v1 = map (| _v : (_ ,) | (_v . 0 ,));
25v1 = map (| row : (_ , _ , _ ,) | ((row . 1 , row . 2 ,) , ()));
26v1 = map (| (g , a) : ((_ , _ ,) , _) | (g . 0 , g . 1 ,));

13v1 -> 2v1;
14v1 -> 5v1;
15v1 -> 8v1;
26v1 -> 11v1;
11v1 -> 16v1;
17v1 -> 18v1;
19v1 -> 17v1;
2v1 -> 19v1;
20v1 -> 17v1;
5v1 -> 20v1;
21v1 -> 22v1;
23v1 -> 21v1;
18v1 -> 23v1;
24v1 -> 21v1;
8v1 -> 24v1;
25v1 -> 26v1;
22v1 -> 25v1;
